--- a/templates/lirik.html
+++ b/templates/lirik.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title> Lyrics Bazaar - Şarkıların Vazgeçilmezi! </title>
+        <title> {{ayarlar["uygAd"]}} - Şarkıların Vazgeçilmezi! </title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}"/>
     </head>
     <body>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
 
-        <h3 class="outline"> Lyrics Bazaar </h3>
+        <h3 class="outline"> {{ayarlar["uygAd"]}} </h3>
         <hr/><br/>
         <section style="padding-left: 25%; padding-right: 25%; padding-top: 10%; padding-bottom: 10%">
             <p> {{ sarkici }} - {{ sarki.capitalize() }}</p> <hr/><br/>
